benefits/static/css/styles.css
/* ... */
/* Previous Button, Language Button */
.btn-outline-dark,
.btn-outline-light {
  border-width: 2px;
}

/* Custom button: Loading spinner */

.spinner-hidden .spinner-border {
  display: none;
}

.spinner-border {
  border-width: 3px;
  margin-left: 15px;
}

/* Custom button: Login.gov Button with text and SVG */
/* Used on Eligibility Start */

:root {
  --login-gov-button-font-size: var(--h3-font-size);
  --login-gov-button-padding: 11px 0;
}

@media (min-width: 992px) {
  :root {
    --login-gov-button-font-size: var(--font-size-16px);
    --login-gov-button-padding: var(--primary-button-padding);
  }
}

#login {
  cursor: pointer;
  line-height: 1;
  text-transform: none;
  letter-spacing: 0;
  font-size: var(--login-gov-button-font-size);
  font-family: "Public Sans", Roboto, system-ui;
  padding: var(--login-gov-button-padding);
}

/* Sets the text `Login.gov` as transparent */
/* With an Login.gov logo image over it */
/* So screenreaders can read out `Login.gov` */
#login .fallback-text {
  background: url("/static/img/login-gov-logo-rev.svg") no-repeat;
  background-size: contain;
  display: block;
  margin: 8px auto 0 auto;
  position: relative;
  width: 132px;
  height: 18px;
  padding-top: 1px;
  color: transparent;
  font-size: var(--font-size-16px);
  font-weight: var(--bold-font-weight);
  line-height: 1;
}

@media (min-width: 992px) {
  #login .fallback-text {
    margin: 0 0 0 5px;
    display: inline-block;
    vertical-align: baseline;
  }
}

/* Custom button: Sign Out */
/* Nav Buttons: Previous Page, Sign Out */

.nav-button-row {
  height: calc(70rem / 16);
}

/* Custom button: Sign Out */

.signout-link,
.signout-link:visited {
  font-size: var(--bs-body-font-size);
  color: var(--primary-color) !important;
  padding: 2px 4px;
  border-radius: var(--border-radius);
  border: var(--border-width) solid var(--primary-color);
  letter-spacing: 0.02em;
  font-weight: 500 !important;
  text-decoration: none !important;
}

@media (min-width: 992px) {
  .signout-link,
  .signout-link:visited {
    font-size: var(--font-size-12px);
    text-decoration: underline !important;
    letter-spacing: var(--body-letter-spacing);
    border: none;
  }
}

/* Custom button: Previous Page */

#previous-page-button {
  border-color: var(--text-primary-color);
  color: var(--text-primary-color);
  font-weight: var(--medium-font-weight);
  font-size: var(--font-size-14px);
  letter-spacing: var(--body-letter-spacing);
  padding: 3.5px 2.35px; /* button dimensions are 130 x 32 */
}

#previous-page-button:hover {
  background: none;
  color: var(--hover-color);
  border-color: var(--hover-color);
}

@media (min-width: 992px) {
  #previous-page-button,
  #previous-page-button:hover {
    border: none;
  }
}

/* Forms: Text Inputs */
/* Form Container: Must use .form-container parent to use these styles */

:root {
  --form-input-gap: 22px;
}

@media (min-width: 992px) {
  :root {
    --form-input-gap: 42px;
  }
}

.form-container .form-group:not(:first-child) {
  padding-top: var(--form-input-gap);
}

.form-container .form-control-label {
  font-size: var(--bs-body-font-size);
  font-weight: var(--medium-font-weight);
  letter-spacing: var(--body-letter-spacing);
  padding-bottom: 12px;
}

.form-container .form-control {
  border-width: var(--border-width);
  border-radius: var(--border-radius);
  border-color: var(--primary-color);
  color: var(--text-primary-color);
  font-size: var(--font-size-24px);
  padding: 0.625rem 0.75rem;
  /* Input height should be 60px */
}

.form-text {
  font-size: var(--font-size-14px);
}

/* Forms: Radio Buttons */

:root {
  --radio-button-size: calc(24rem / 16);
  --radio-input-color: var(--standout-color);
  --radio-input-gap: calc(40rem / 16);
}

@media (min-width: 992px) {
  :root {
    --radio-input-gap: calc(15rem / 16);
  }
}

.radio-label {
  cursor: pointer;
}

.radio-input-group {
  gap: var(--radio-input-gap);
}

.radio-input-group:not(:first-child) {
  padding-top: calc(24rem / 16);
}

.radio-input {
  cursor: pointer;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  width: var(--radio-button-size);
  height: var(--radio-button-size);
  border: var(--border-width) solid var(--radio-input-color);
  margin: calc(3rem / 16) 0;
}

.radio-input:checked {
  background-color: var(--radio-input-color);
  box-shadow: inset 0 0 0 var(--border-width) var(--bs-white);
}

/* Media List */

:root {
  --media-item-icon-size: calc(64rem / 16);
  --media-item-gap: calc(24rem / 16);
  --media-item-icon-margin: calc(24rem / 16);
  --media-title-margin-top: calc(24rem / 16);
}

@media (min-width: 992px) {
  :root {
    --media-item-icon-size: calc(90rem / 16);
    --media-item-gap: calc(62rem / 16);
    --media-item-icon-margin: calc(32rem / 16);
    --media-title-margin-top: calc(64rem / 16);
  }
}

h1 + .media-list, /* A .media-list immediately following the h1: Enrollment Success, but not Eligibility Start */
.media-body--details p:not(:first-of-type) {
  /* All the p within .media-body--details, except for the first p - Any media item with more than one p */
  padding-top: calc(24rem / 16);
}

.media-title {
  margin-top: var(--media-title-margin-top);
  margin-bottom: calc(24rem / 16);
}

.media-list {
  gap: var(--media-item-gap);
  margin-bottom: calc(64rem / 16);
}

.media-list .media .media-line .icon {
  width: var(--media-item-icon-size);
  height: var(--media-item-icon-size);
  margin-right: var(--media-item-icon-margin);
}

.media-list .media .media-body--details,
.media-list .media .media-body--items li:first-child {
  padding-top: calc(5rem / 16);
}

.media-list .media .media-body--items li {
  list-style-type: disc;
}

/* Enrollment Success */
/* Custom in-line log out button for Enrollment Success, in paragraph */

:root {
  --logout-paragraph-margin-left: calc(
    var(--media-item-icon-margin) + var(--media-item-icon-size)
  );
}

@media (min-width: 992px) {
  :root {
    --logout-paragraph-margin-left: 0;
  }
}
/* ... */

